vlib/v/checker/tests/shift_op_wrong_left_type_err.out
vlib/v/checker/tests/shift_op_wrong_left_type_err.vv:2:10: error: invalid operation: shift of type `any_float`
    1 | fn main() {
    2 |     println(0.5 << 1)
      |             ~~~
    3 | }
